 Copyright (C) 2009, 2010, 2011, 2012, 2014 Mats Wahlberg

 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved. This file is offered as-is,
 without any warranty.

TODO: more info in header!

ReCaged 0.7.1 "The Sky's the Limit" (?/?/2014)
----------------------------------------------
 * Move to Autotools (Automake, Autoconf) for building
 * Detect if running in "installed" or "portable" mode
 * Logging to file
 * NSIS installer for w32
 * Joystick (gamepad) support
 * More reliable window creation (native BPP, better fullscreen support)
 * Use native screen resolution for fullscreen mode
 * Fixed various insufficient memory allocations
 * Anti-Aliasing support (multisample)
 * Increased simulation stability
 * Car improvements:
   * New tyre friction simulation model (more stable, easier to configure)
   * New tyre combined slip/grip model
   * New tyre/rim contact point evaluation
   * New soft-brake/rolling-resistance code (more reliable at low speeds)
   *..... TODO!