@@ -133,6 +133,9 @@ wheel:angular_drag 0.5
 wheel:spring 300000 #newtons per meter of tyre compresion
 wheel:damping 100 #damping of spring force from above
 
+#fixes bending axes at high speeds
+wheel:finite_rotation true
+
 #rolling resistance: braking torque on tyre from ground (and tyre compression)
 wheel:rollres 20000
 
