@@ -24,4 +24,5 @@ ReCaged 0.7.1 "The Sky's the Limit" (?/?/2014)
    * New tyre combined slip/grip model
    * New tyre/rim contact point evaluation
    * New soft-brake/rolling-resistance code (more reliable at low speeds)
+   * Less bending of wheel axles at high speeds
    *..... TODO!
